--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "ENVIRONMENT=dev nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "ENVIRONMENT=dev nodemon src/index.js",
     "start:prod": "ENVIRONMENT=prod nodemon src/index.js"
