--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,4 @@
+PORT=8080
 EXPRESS_PORT = 8080
 DB_URL = 'mongodb+srv://ldanko:Iz8ddD4Iu1kR7vEf@productmanager.0scft9y.mongodb.net/?retryWrites=true&w=majority'
 SESSIONS_URL = 'mongodb+srv://ldanko:Iz8ddD4Iu1kR7vEf@productmanager.0scft9y.mongodb.net/sessions?retryWrites=true&w=majority'
